@@ -1,6 +1,10 @@
 v3.3.20 (XXXX-XX-XX)
 --------------------
 
+
+* fixes some graph data parsing issues in the ui, e.g. cleaning up duplicate
+  edges inside the graph viewer.
+
 * added option `--rocksdb.total-write-buffer-size` to limit total memory usage
   across all RocksDB in-memory write buffers
 
